fix: fix the view on smaller screens

--- a/blocks/central-section/central-section.css
+++ b/blocks/central-section/central-section.css
@@ -1,5 +1,5 @@
 .central-section {
-    max-width: 1170px;
+    width: 1170px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
