--- a/blocks/column/_content/_main-info/column_content_main-info.css
+++ b/blocks/column/_content/_main-info/column_content_main-info.css
@@ -1,3 +1,3 @@
 .column_content_main-info {
-    max-width: 270px;
+    width: 270px;
 }
