--- a/blocks/most-popular/most-popular.css
+++ b/blocks/most-popular/most-popular.css
@@ -1,5 +1,5 @@
 .most-popular {
     padding-bottom: 79px;
-    max-width: 1170px;
+    width: 1170px;
     margin: 0 auto;
 }
