--- a/blocks/popular/__image/popular__image.css
+++ b/blocks/popular/__image/popular__image.css
@@ -1,5 +1,5 @@
 .popular__image {
-    max-width: 270px;
+    width: 270px;
     object-fit: cover;
     margin-bottom: 20px;
     border-radius: 5px;
