--- a/blocks/sidebar-widget/sidebar-widget.css
+++ b/blocks/sidebar-widget/sidebar-widget.css
@@ -1,3 +1,3 @@
 .sidebar-widget {
-    max-width: 270px;
+    width: 270px;
 }
